--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,4 +1,11 @@
 {
-  "compilerOptions": { "composite": true, "module": "ESNext", "moduleResolution": "bundler" },
+  "compilerOptions": {
+    "composite": true,
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true
+  },
   "include": ["vite.config.ts"]
 }
+
