--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "openai": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
